--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,19 +1,16 @@
 <h2>Welcome <%= @user.username %>,</h2>
-
-<p>We account is confirm and is read to Blend. Connecting with newcomers/locals has never been easier.</p>
-
-<p><strong>Get start with 3 simples steps:</strong></p>
-
+<p>Your account has been created - connecting with newcomers/locals has never been easier.</p>
+<p><strong>Here are three ways for you to get the most out of it:</strong></p>
 <table>
   <tr>
     <td>
       <p style="margin: 0;padding:10px 20px;font-size: 5rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
-        <%= image_tag "check_emoji.png", style: 'max-width: unset' %>
+        <%= image_tag "smile_emoji.png", style: 'max-width: unset'%>
       </p>
     </td>
     <td align="left">
-      <strong style="color: #333333;">Complete your profile</strong><br> Describe your personal interests, work experience & contact info.
-      <%= link_to 'Complete now!', wizard_url, {style: 'color: #74CCD1; text-decoration: none;'} %>
+      <strong style="color: #333333;">Find Your Match</strong><br> Find newcomers/locals with the same age and interests as you.
+      <%= link_to 'Get started!', root_url, {style: 'color: #74CCD1; text-decoration: none;'} %>
     </td>
   </tr>
   <tr>
@@ -23,19 +20,19 @@
       </p>
     </td>
     <td align="left">
-      <strong style="color: #333333;">Uplaod a profile picture</strong><br> Personalize your profile and help people reconize you.
+      <strong style="color: #333333;">Upload a Profile Photo</strong><br> Personalize your profile and help people recognize you.
       <%= link_to 'Uplaod photo', upload_photo_url, {style: 'color: #74CCD1; text-decoration: none;'} %>
     </td>
   </tr>
   <tr>
     <td>
       <p style="margin: 0;padding:10px 20px;font-size: 5rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
-        <%= image_tag "smile_emoji.png", style: 'max-width: unset'%>
+        <%= image_tag "check_emoji.png", style: 'max-width: unset' %>
       </p>
     </td>
     <td align="left">
-      <strong style="color: #333333;">Blendin!</strong><br> Find newcomers/locals with the same interests and age as you.
-      <%= link_to 'Get started!', root_url, {style: 'color: #74CCD1; text-decoration: none;'} %>
+      <strong style="color: #333333;">Edit Your Profile</strong><br> Describe your personal interests, work experience & contact info.
+      <%= link_to 'Complete now!', wizard_url, {style: 'color: #74CCD1; text-decoration: none;'} %>
     </td>
   </tr>
 </table>
