add translation to wizard

--- a/app/views/header/_main.html.erb
+++ b/app/views/header/_main.html.erb
@@ -4,9 +4,9 @@
 
     <div class="col col-right col-5" id="nav-js">
         <nav class="topnav">
-          <%= link_to "Community", root_url %>
-          <%= link_to "My blends", blends_path %>
-          <%= link_to "Settings", wizard_path %>
+          <%= link_to t('.community_link'), root_url %>
+          <%= link_to t('.my_blends_link'), blends_path %>
+          <%= link_to t('.settings_link'), wizard_path %>
           <a rel="nofollow" data-method="delete" href="/users/sign_out">Logout</a>
           <a id="toggle-nav" class="icon" href="#open-nav" >&#9776;</a>
         </nav>
