--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 
 <head>
   <title><%= t('seo.title') %></title>
-  <meta name="description" content="<%= t('seo.description') %>">
+  <meta name="description" content=<%= t('seo.description') %>>
 
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0' name='viewport' />
 
@@ -18,7 +18,7 @@
   <meta property="og:image:height" content="382">
   <meta property="og:image:width" content="729">
   <meta property="og:title" content="<%= t('seo.title') %>">
-  <meta property="og:description" content="Blendin is an online platform that connects newcomers (refugees) to Dutch locals. We see a gap between newcomers and locals and we have one mission, closing this gap by arranging meet ups between newcomers and locals. Join in the community now!">
+  <meta property="og:description" content=<%= t('seo.og_description')>
   <meta property="og:url" content="https://community.blendinnow.nl">
 
   <%= csrf_meta_tags %>
