--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,7 +35,7 @@
 
       <% if @user.full_street_address %>
         <section class="Detail">
-          <h3><%= t('.profile_adress') %></h3>
+          <h3><%= t('.profile_address') %></h3>
           <p class="label-local"><%= @user.full_street_address.capitalize %></p>
         </section>
       <% end %>
