--- a/app/views/wizard/_top_nav.html.erb
+++ b/app/views/wizard/_top_nav.html.erb
@@ -1,13 +1,13 @@
 <div class="sm-col-7 lg-col-7 mx-auto mb4">
   <div class="flex center tabs">
     <div class="flex-auto tab">
-      <%= active_link_to "Profile", wizard_path %>
+      <%= active_link_to t('.profile'), wizard_path %>
     </div>
     <div class="flex-auto tab">
-      <%= active_link_to "Photo", upload_photo_path %>
+      <%= active_link_to t('.photo'), upload_photo_path %>
     </div>
     <div class="flex-auto tab">
-      <%= active_link_to "Settings", edit_user_registration_path %>
+      <%= active_link_to t('.settings'), edit_user_registration_path %>
     </div>
   </div>
 </div>
