--- a/app/views/wizard/index.html.erb
+++ b/app/views/wizard/index.html.erb
@@ -1,69 +1,69 @@
 <section class="EditProfile clearfix">
   <div class="sm-col-6 lg-col-6 mx-auto">
     <% if @user.sign_in_count == 1 %>
-      <h3>Hi <%= @user.name  %>,<br> Before you can meet people through Blendin we need some information. The more you complete your profile the better matches you will find.</h3>
+      <h3><%= t('.greetings_html', username: @user.name) %></h3>
     <% else %>
       <%= render 'top_nav' %>
     <% end %>
 
     <%= form_for(@user, html: {id:'wizard-form-js'}) do |f| %>
 
-      <label class="Label">Please select an option:</label>
+      <label class="Label"><%= t('.local_label') %></label>
 
       <label class="Label CheckBoxRound">
         <%= f.radio_button :local, true, class:"css-checkbox", required:true  %>
-        I'm a local
+        <%= t('.local_true') %>
       </label>
 
       <label class="Label CheckBoxRound">
         <%= f.radio_button :local, false, class:"css-checkbox", required:true  %>
-        I'm not a local (newcomer)
+        <%= t('.local_false') %>
       </label>
 
-      <label class="Label">Please select an option:</label>
+      <label class="Label"><%= t('.gender_label') %></label>
 
       <label class="Label CheckBoxRound">
         <%= f.radio_button :gender, "m", class:"css-checkbox", required:true  %>
-        I'm a man 👨
+        <%= t('.gender_male') %>
       </label>
 
       <label class="Label CheckBoxRound">
         <%= f.radio_button :gender, "f", class:"css-checkbox", required:true  %>
-        I'm a woman 👩
+        <%= t('.gender_female') %>
       </label>
 
-      <label class="Label">🎂 Date of Birth:</label>
+      <label class="Label"><%= t('.birthday_label') %></label>
       <%= f.date_select :birthday, {start_year: 1960, end_year: 2000, :order => [:day, :month, :year], prompt: true}, { class: 'Input Select' , required: true} %>
 
-      <label class="Label">🌇 Where do you live?</label>
-      <%= f.text_field :full_street_address, class:"Input AddressField", required: true, placeholder: "Ex. Amsterdam, Netherlands" %>
+      <label class="Label"><%= t('.address_label') %></label>
+      <%= f.text_field :full_street_address, class:"Input AddressField", required: true, placeholder: t('.address_placeholder') %>
 
-      <label class="Label">🇸🇾 🇳🇱 Country of origin:</label>
-      <%= f.text_field :country, id:"country-js", class:"Input AddressField", placeholder: "Ex. Syria" %>
+      <label class="Label"><%= t('.country_label') %></label>
+      <%= f.text_field :country, id:"country-js", class:"Input AddressField", placeholder: t('.country_placeholder') %>
 
-      <label class="Label">📙 Choose your interest from the list: </label>
+      <label class="Label"><%= t('.interest_label') %></label>
       <select name="user[tag_list][]" id="taglist-js"  multiple required>
         <% @user.tag_list.each do |tag| %>
           <option value="<%= tag %>" selected><%= tag %></option>
         <% end %>
       </select>
-      <i>(Choose at least three interest form the list. The more the better.) </i>
+      <i><%= t('.interest_helper') %></i>
 
-      <label class="Label">💪 Study and/or work experience:</label>
-      <%= f.text_field :job, class: "Input", placeholder:"Ex. Car engineer or lawyer" %>
-      <i>(This could be your previous job/study.) </i>
+      <label class="Label"><%= t('.job_label') %></label>
+      <%= f.text_field :job, class: "Input", placeholder:t('.job_placeholder') %>
+      <i><%= t('.job_helper') %> </i>
 
 
-      <label class="Label">📱 Phone number:</label>
-      <%= f.text_field :phone, required: 'true', class: "Input", required: true, placeholder:"Ex. 0612345678", 'data-parsley-trigger' => "change",  'data-parsley-type' => "number", 'data-parsley-maxlength' =>"10" %>
+      <label class="Label"><%= t('.phone_label') %></label>
+      <%= f.text_field :phone, required: 'true', class: "Input", required: true, placeholder: t('.phone_placeholder'), 'data-parsley-trigger' => "change",  'data-parsley-type' => "number", 'data-parsley-maxlength' =>"10" %>
 
-      <label class="Label">💬 Tell more about yourself: </label>
+      <label class="Label"><%= t('.about_label') %> </label>
       <%= f.text_area :about, class:"Input" %>
-      <i>(This is not mandatory but it will help you to connect with others in the community.)</i>
+      <i><%= t('.about_helper') %></i>
 
       <br>
 
-      <%= f.submit "Confirm and continue", class:"Button full center" %>
+      <%= f.submit t('.submit_btn'), class:"Button full center" %>
 
     <% end %>
   </div>
