--- a/app/views/blend_mailer/blend_accepted_email.html.erb
+++ b/app/views/blend_mailer/blend_accepted_email.html.erb
@@ -1,21 +1,21 @@
-<h2 style="margin: 0;padding: 0;font-size: 18px;font-family: 'Quicksand', sans-serif;margin-bottom: 20px;line-height: 1.25;color: #333333;"><%= @sender.username %>, your Blend resquest was accepted!</h2>
-<p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;"> Get in touch with <%= @recipient.username %> and start blending.</p>
+<h2 style="margin: 0;padding: 0;font-size: 18px;font-family: 'Quicksand', sans-serif;margin-bottom: 20px;line-height: 1.25;color: #333333;"><%= t('.main_msg', sender: @sender.username) %></h2>
+<p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;"> <%= t('.secundary_msg', recipient: @recipient.username) %></p>
 <table style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;border-collapse: collapse;width: 100% !important;">
   <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
       <td style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
           <p style="padding: 0 20px;text-align: right;font-size: 2rem;color: #71c3c7;margin: 0;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;">
-              <%= image_tag(@recipient.avatar, id: 'avatar')%>
+              <%= image_tag(@recipient.avatar, id: 'avatar', style:" width: 70px; height: 70px; border-radius: 50%; display: unset")%>
           </p>
       </td>
       <td align="left" style="max-width: 380px;margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
         <% if !@recipient.phone.empty? %>
-          <p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;">That's the spirit! Call me to arrange a meet-up as soon as possible at:<br style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;"><%= @recipient.phone %></p>
+          <p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;"><%= t('.phone_msg') %><br style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;"><%= @recipient.phone %></p>
         <% else %>
-          <p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;">That's the spirit! Text me to arrange a meet-up as soon as possible at:<br style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;"><a href="mailto:&lt;%= @recipient.email %&gt;" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;color: #74CCD1;text-decoration: none;"><%= @recipient.email %></a></p>
+          <p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;"><%= t('.email_msg') %><br style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;"><a href="mailto:&lt;%= @recipient.email %&gt;" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;color: #74CCD1;text-decoration: none;"><%= @recipient.email %></a></p>
         <% end %>
       </td>
   </tr>
 </table>
 <div align="center" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
-  <%= link_to 'See full profile', user_url(@recipient), class: 'button' %>
+  <%= link_to t('.btn'), user_url(@recipient), class: 'button' %>
 </div>
