--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   <meta property="og:image:height" content="382">
   <meta property="og:image:width" content="729">
   <meta property="og:title" content="<%= t('seo.title') %>">
-  <meta property="og:description" content=<%= t('seo.og_description')>
+  <meta property="og:description" content=<%= t('seo.og_description') %>>
   <meta property="og:url" content="https://community.blendinnow.nl">
 
   <%= csrf_meta_tags %>
