add translation to mailer layout footer

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -158,7 +158,7 @@
           <table style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;border-collapse: collapse;width: 100% !important;">
             <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
               <td class="content footer" align="center" style="margin: 0;padding: 30px 35px;font-size: 100%;font-family: 'Quicksand', sans-serif;background: none;">
-                <p style="margin: 0;padding: 0;font-size: 14px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 0;color: #888;text-align: center;">Sent by
+                <p style="margin: 0;padding: 0;font-size: 14px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 0;color: #888;text-align: center;"><%= t('.footer')%>
                   <a href="#" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;color: #888;text-decoration: none;font-weight: bold;">Blendin</a>, <a style="color: #888;text-decoration: none;">Tweede Jan van der Heijdenstraat 67-3, 1074 XR</a></p>
                 <p style="margin: 0;padding: 0;font-size: 14px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 0;color: #888;text-align: center;">
                   <a href="mailto:info@blendinnow.nl" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;color: #888;text-decoration: none;font-weight: bold;">info@blendinnow.nl</a>
