quick text changes

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
       <%= f.password_field :password, placeholder: "Password (min 6char)", autocomplete: "off", class:"Input" %>
 
       <label class="Label CheckBox">
-        <%= f.check_box(:terms_and_conditions )%> I read and agree the <a href="//www.iubenda.com/privacy-policy/7951305" class="no-brand" title="Privacy Policy" target="_blank">Privacy Policy</a>
+        <%= f.check_box(:terms_and_conditions )%> I have read and agree with the <a href="//www.iubenda.com/privacy-policy/7951305" class="no-brand" title="Privacy Policy" target="_blank">Privacy Policy</a>
       </label>
 
       <div class="actions">
