--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,12 @@
 <section class="Auth clearfix flex items-center">
     <div class="sm-col-6 lg-col-3 mx-auto">
 
-      <h2 class="center">Forgot your password?</h2>
+      <h2 class="center"><%= t('.header')%></h2>
 
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
         <%= devise_error_messages! %>
-        <%= f.email_field :email, autofocus: true, class:"Input", placeholder:"Type your email address"  %>
-        <%= f.submit "Send reset link", class: "Button center" %>
+        <%= f.email_field :email, autofocus: true, class:"Input", placeholder:t('.email_placeholder')  %>
+        <%= f.submit t('.btn_submit'), class: "Button center" %>
       <% end %>
 
       <%= render "devise/shared/links" %>
