--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,16 +4,16 @@
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
-      <%= f.email_field :email, autofocus: true, placeholder: "Email", class:"Input" %>
+      <%= f.email_field :email, autofocus: true, placeholder: t('.email_placeholder'), class:"Input" %>
       <%= f.text_field :username, placeholder: "Full name", class:"Input" %>
-      <%= f.password_field :password, placeholder: "Password (min 6char)", autocomplete: "off", class:"Input" %>
+      <%= f.password_field :password, placeholder: t('.pass_placeholder'), autocomplete: "off", class:"Input" %>
 
       <label class="Label CheckBox">
-        <%= f.check_box(:terms_and_conditions )%> I read and agree the <a href="//www.iubenda.com/privacy-policy/7951305" class="no-brand" title="Privacy Policy" target="_blank">Privacy Policy</a>
+        <%= f.check_box(:terms_and_conditions )%> <%= t('.terms_and_conditions') %> <a href="//www.iubenda.com/privacy-policy/7951305" class="no-brand" title="Privacy Policy" target="_blank"><%= t('.privacy_policy') %></a>
       </label>
 
       <div class="actions">
-        <%= f.submit "Sign up", class: "Button center"  %>
+        <%= f.submit t('.btn_submit'), class: "Button center"  %>
       </div>
     <% end %>
 
