--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,19 +1,19 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "I have already an account", new_session_path(resource_name), class: "Link" %><br />
+  <%= link_to t('.already_have_an_account'), new_session_path(resource_name), class: "Link" %><br />
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Register", new_registration_path(resource_name), class: "Link" %>
+  <%= link_to t('.register'), new_registration_path(resource_name), class: "Link" %>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name), class: "Link" %>
+  <%= link_to t('.forgot_pass'), new_password_path(resource_name), class: "Link" %>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
+  <%= link_to t('.didnt_receive_confirmation'), new_confirmation_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
+  <%= link_to t('.didnt_receive_unlock_confirmation'), new_unlock_path(resource_name) %><br />
 <% end -%>
