Lang links in Nav

--- a/app/assets/stylesheets/components/Nav.css
+++ b/app/assets/stylesheets/components/Nav.css
@@ -18,6 +18,7 @@
 /* Change the color of links on hover */
 .topnav a:hover {
   opacity: 0.9;
+  color: #00bcd4;
 }
 
 /* Hide the link that should open and close the topnav on small screens */
@@ -25,6 +26,12 @@
     display: none;
 }
 
+.topnav .lang-lnk{
+  padding: 13px 10px;
+}
+.right-border{
+  border-right: 1px solid #ccc;
+}
 
 @media only screen and (max-width: 64em) {
   .responsive {
@@ -56,5 +63,8 @@
     padding-left: 0;
     display: block;
     text-align: left;
+  }
+  .right-border{
+    border-right: 0;
   }
 }
