--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
       <%= f.email_field :email, autofocus: true, placeholder: t('.email_placeholder'), class:"Input" %>
-      <%= f.text_field :username, placeholder: "Full name", class:"Input" %>
+      <%= f.text_field :username, placeholder: t('.name_placeholder'), class:"Input" %>
       <%= f.password_field :password, placeholder: t('.pass_placeholder'), autocomplete: "off", class:"Input" %>
 
       <label class="Label CheckBox">
