--- a/app/views/blend_mailer/blend_accepted_email.html.erb
+++ b/app/views/blend_mailer/blend_accepted_email.html.erb
@@ -17,5 +17,5 @@
   </tr>
 </table>
 <div align="center" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
-  <%= link_to t('.btn'), user_url(@recipient), class: 'button' %>
+  <%= link_to t('.btn'), user_url(@recipient, :locale => :en), class: 'button' %>
 </div>
