--- a/app/views/wizard/index.html.erb
+++ b/app/views/wizard/index.html.erb
@@ -115,16 +115,11 @@
 
   });
 </script>
-<!-- Display the intro tour only one time -->
+
 <% content_for(:after_js) do %>
   <script>
-  //   introJs.fn.oncomplete(
-  //     function() {
-  //   if (document.cookie.replace(/(?:(?:^|.*;\s*)introViewProfile\s*\=\s*([^;]*).*$)|^.*$/, "$1") !== "true") {
-  //     introJs().start();
-  //     document.cookie = "introViewProfile=true; expires=Fri, 31 Dec 9999 23:59:59 GMT";
-  //   }
-  // });
-    introJs().start();
+    $(function () {
+      window.initIntroJs('wizard');
+    });
   </script>
 <% end %>
