--- a/app/views/wizard/upload.html.erb
+++ b/app/views/wizard/upload.html.erb
@@ -23,6 +23,8 @@
 <script src="https://cdn.jsdelivr.net/places.js/1/places.min.js"></script>
 
   <script>
+  var errorText = "<%= t('.error') %>";
+
   $(function () {
 
     $('.InputUpload').change(function(){
@@ -40,22 +42,16 @@
       }
       else
       {
-        $('.error').html(<%= t('.error')%>);
+        $('.error').html(errorText);
       }
     });
 
   });
 </script>
-<!-- Display the intro tour only one time -->
 <% content_for(:after_js) do %>
   <script>
-  //   introJs.fn.oncomplete(
-  //     function() {
-  //   if (document.cookie.replace(/(?:(?:^|.*;\s*)introViewPhoto\s*\=\s*([^;]*).*$)|^.*$/, "$1") !== "true") {
-  //     introJs().start();
-  //     document.cookie = "introViewPhoto=true; expires=Fri, 31 Dec 9999 23:59:59 GMT";
-  //   }
-  // });
-    introJs().start();
+    $(function () {
+      window.initIntroJs('upload');
+    });
   </script>
 <% end %>
