--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,10 @@
 
   <% if user_signed_in? %>
     <%= render 'header/main' %>
+  <% else %>
+    <div class="lngs">
+      <%= render 'header/languages' %>
+    </div>
   <% end %>
 
   <main>
