remove username from template email

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t('.greetings', username: @user.username) %></h2>
+<h2><%= t('.greetings', username: @user.name) %></h2>
 <p><%= t('.msg_html') %></p>
 <table>
   <tr>
