--- a/app/views/blend_mailer/blend_request_email.html.erb
+++ b/app/views/blend_mailer/blend_request_email.html.erb
@@ -1,5 +1,5 @@
-<h2 style="margin: 0;padding: 0;font-size: 18px;font-family: 'Quicksand', sans-serif;margin-bottom: 20px;line-height: 1.25;color: #333333;"><%= t('.main_msg', recipient: @recipient.username) %></h2>
-<p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;"><%= t('.secundary_msg', sender: @sender.username ) %></p>
+<h2 style="margin: 0;padding: 0;font-size: 18px;font-family: 'Quicksand', sans-serif;margin-bottom: 20px;line-height: 1.25;color: #333333;"><%= t('.main_msg', recipient: @recipient.name) %></h2>
+<p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;"><%= t('.secundary_msg', sender: @sender.name ) %></p>
 <table style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;border-collapse: collapse;width: 100% !important;">
   <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
     <td align="" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
