--- a/app/views/blend_mailer/blend_accepted_email.html.erb
+++ b/app/views/blend_mailer/blend_accepted_email.html.erb
@@ -8,7 +8,7 @@
           </p>
       </td>
       <td align="left" style="max-width: 380px;margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
-        <% if !@recipient.phone.empty? %>
+        <% if !@recipient.phone.nil? %>
           <p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;"><%= t('.phone_msg') %><br style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;"><%= @recipient.phone %></p>
         <% else %>
           <p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;"><%= t('.email_msg') %><br style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;"><a href="mailto:&lt;%= @recipient.email %&gt;" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;color: #74CCD1;text-decoration: none;"><%= @recipient.email %></a></p>
