--- a/app/views/admin/users/_matches.html.erb
+++ b/app/views/admin/users/_matches.html.erb
@@ -1,4 +1,9 @@
-<% @matches = User.match_with(user) %>
+<%
+  @matches = User.match_with(current_user, 7, 10).page params[:page]
+  if @matches.length <= 10
+    @matches = User.match_with(current_user, 15, 20).page params[:page]
+  end
+%>
 
 <div>
   <h1>Possible matches based on interest with:</h1>
