--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -14,7 +14,12 @@ a{
 a:hover{
   color:#777777;
 }
-
+q {
+  quotes: "\201C""\201D""\2018""\2019";
+  font-size: 1em;
+  font-weight: bold;
+  margin: 0.5em 0 3em 0;
+}
 .headline{
   text-align: center;
   font-size: 1.6em;
