some texts corrections

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
 
 		<div class="sm-col sm-col-8 px2">
       <div class="ProfileInfo">
-        <h2><%= t('.profile_username', username: @user.name.capitalize) %></h2>
+        <h2><%= t('.profile_username', username: @user.name) %></h2>
         <p class><%= t('.profile_age', age: @user.age) %></p>
       </div>
 
