--- a/app/assets/stylesheets/components/Label.css
+++ b/app/assets/stylesheets/components/Label.css
@@ -3,7 +3,7 @@
   font-size: 1.2em;
   margin-top: 1.5em;
   margin-bottom: 0.3em;
-  font-weight: bold;
+  font-weight: normal;
   display: block;
   color: #565656;
 }
